Se realiza la kata 11 con sus respectiva prueba funcionando